--- a/cviceni_patek/package.json
+++ b/cviceni_patek/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cviceni_patek",
+  "homepage":"https://www.tiborsana.info/cv4/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
